z-index of lightbox fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -216,7 +216,8 @@ footer {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.8); }
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 1; }
 
 #x {
   position: fixed;
@@ -244,7 +245,8 @@ footer {
   padding-top: 60px; }
   #login-box p {
     font-size: 22px;
-    color: black; }
+    color: black;
+    margin: 20px 0; }
   #login-box img {
     display: inline;
     position: absolute;
