--- a/public/css/scss/components/_lightbox.scss
+++ b/public/css/scss/components/_lightbox.scss
@@ -5,6 +5,7 @@
   width:100%;
   height:100%;
   background:rgba(0, 0, 0, .8);
+  z-index: 1;
 }
 
 #x {
@@ -34,6 +35,7 @@
   p {
     font-size: 22px;
     color: black;
+    margin: 20px 0;
   }
   img {
     // border: 4px solid black;
